<resources>
    <string name="app_name">App News</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="categorias_de_noticias">Categorias de notícias</string>
    <string name="tecnologia">Tecnologia</string>
    <string name="negocios">Negócios</string>
    <string name="entreterimento">Entreterimento</string>
    <string name="geral">Geral</string>
    <string name="saude">Saúde</string>
    <string name="ciencia">Ciência</string>
    <string name="esportes">Esportes</string>
    <string name="pesquisar">Pesquisar...</string>
    <string name="carregando">Carregando...</string>
    <string name="menu">menu</string>
</resources>